fixed an issue with the sign up footer overlapping on horizontal media screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ input:focus {
 
 /*signup footer*/
 #footer-signup {
-    position: fixed;
+    position: relative;
     bottom: 0;
     height: 150px;
     width: 100%;
@@ -329,6 +329,11 @@ input:focus {
 
 #footer-signup div {
     margin-top: 30px;
+}
+
+#content{
+    width:100%;
+    height:100vh;
 }
 
 /*media queries*/
@@ -534,7 +539,7 @@ input:focus {
     }
 
     #navbar-link{
-        width:100%;
+        width:auto;
     }
 }
 
@@ -577,8 +582,7 @@ input:focus {
     }
 
     #footer-signup #footer-container{
-        height:75px;
-        position:fixed;
+        position:relative;
         bottom:0;
     }
 
